# mail-agregator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  TZ.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
.smoketest/: headers2.txt  headers3.txt  headers4.txt  headers5.txt  headers6.txt  headers_json.txt  inbox.html  jar2.txt  jar3_dummy.txt  jar5.txt  jar_json.txt  json_resp.txt  login.html  login_pwd.html  post1.html
backend/: __init__.py
backend/app/: cookies.py  csrf.py  deps.py  exceptions.py  flash.py  main.py  middlewares.py  rate_limit.py  security.py  sessions.py  templates.py
deploy/: Dockerfile  README.md  minio-bootstrap.sh
deploy/caddy/: Caddyfile
deploy/nginx/: nginx.conf
docs/: 01-architecture.md  02-tech-stack.md  03-data-model.md  04-api-contracts.md  05-modules.md  06-security.md  07-deployment.md  08-frontend.md  100-known-tech-debt.md  README.md  SERVER-SETUP.md
docs/adr/: ADR-0001-tech-stack.md  ADR-0002-imap-library.md  ADR-0003-worker.md  ADR-0004-sessions.md  ADR-0005-encryption.md  ADR-0006-password-hashing.md  ADR-0007-storage-scheme.md  ADR-0008-sync-strategy.md  ADR-0009-rate-limiting.md  ADR-0010-csrf-protection.md  ADR-0011-retention.md  ADR-0012-message-body-storage.md  ADR-0013-concurrency-model.md  ADR-0014-logging.md  ADR-0015-no-js-fallback.md  ADR-0016-two-step-login.md  ADR-0017-tags.md  ADR-0018-telegram-launcher.md  ADR-0019-groups-and-roles.md  ADR-0020-mail-account-nickname.md  ADR-0021-russian-localization.md  ADR-0022-telegram-sso-and-notifications.md  ADR-0023-outbound-webhooks.md  ADR-0024-multi-telegram-links.md  ADR-0025-outlook-oauth2.md  ADR-0026-sync-error-resilience.md  ADR-0027-push-team-bots.md  ADR-0028-oauth-login-failed-transient.md  ADR-0029-external-pull-api.md  ADR-0030-multi-group-membership.md  ADR-0031-mailbox-team-selection.md  ADR-0032-dedicated-server-and-host-certbot.md  ADR-0033-mailbox-down-telegram-alert.md  ADR-0034-leader-mail-forwarding.md  ADR-0035-external-reply-endpoint.md  ADR-0036-external-backward-pagination.md  ADR-0037-external-teams-mailboxes-message-filters.md  ADR-0038-reversible-login-password-storage.md  ADR-0039-external-write-api.md  ADR-0040-global-tags.md  (+9 more)
migrations/: env.py
migrations/versions/: 20260505_001_initial_schema.py  20260505_002_lower_username_check.py  20260507_003_add_tags.py  20260508_004_groups_and_roles.py  20260508_005_drop_role_group_check.py  20260508_006_drop_leader_trigger.py  20260508_007_drop_leader_trigger_v2.py  20260509_008_optional_leader.py  20260509_009_mail_account_group_id.py  20260510_010_telegram_sso_and_notifications.py  20260513_011_messages_body_html.py  20260514_012_dedupe_mail_accounts.py  20260514_013_drop_email_unique.py  20260515_014_outbound_webhooks.py  20260521_015_tag_match_mode.py  20260521_016_rebuild_builtin_tags.py  20260527_017_multi_telegram_links.py  20260527_018_outlook_oauth2.py  20260623_019_user_groups.py  20260703_020_mailbox_disabled_alert.py  20260703_021_mail_forwarding.py  20260706_022_user_password_encrypted.py  20260709_023_global_tags.py  20260710_024_messages_pushed_at.py  20260715_025_decommission_phase_c_mail_accounts.py  20260715_026_decommission_phase_d_drop_15_tables.py  20260715_027_decommission_phase_e_users_groups.py  20260715_028_decommission_phase_f_reduce_users.py
shared/: __init__.py  config.py  credentials.py  crypto.py  db.py  html_sanitize.py  logging.py  preview.py  redis_client.py  session_guards.py  storage.py  url_safety.py
shared/models/: __init__.py  admin_audit.py  attachment.py  group.py  group_forwarding.py  mail_account.py  message.py  message_forwards.py  sent_attachment.py  sent_message.py  tag.py  telegram_link.py  telegram_notification.py  user.py  user_group.py  user_settings.py  webhook.py
tests/: README.md  conftest.py  loop_probe.py
tests/contract/: conftest.py  test_api_contracts.py  test_form_encoded_endpoints.py
tests/frontend/: conftest.py  test_csp_in_html.py  test_frontend_decommissioned.py  test_team_selection_render.py  test_templates.py
tests/integration/: conftest.py  test_accounts_crud.py  test_accounts_service.py  test_admin.py  test_auth_flow.py  test_auth_service.py  test_csrf.py  test_db_models.py  test_flash_e2e.py  test_known_bugs_repro.py  test_messages.py  test_method_override_e2e.py  test_multigroup_endpoints.py  test_oauth_authorize_rate_limit.py  test_rate_limit.py  test_seed_super_admin.py  test_send.py  test_send_service.py  test_try_consume.py
tests/multigroup/: conftest.py  test_apply_tags_membership_bug.py  test_migration_019.py  test_notifications.py  test_tag_visibility.py  test_visibility.py
tests/oauth/: _mock_token.py  conftest.py  test_migration_018.py  test_migration_018_downgrade.py  test_oauth_display_name_patch.py  (+5 more)
worker/: __init__.py
(+237 files in other folders)
