[project]
name = "mail-aggregator"
version = "0.1.0"
description = "Self-hosted mail aggregator (FastAPI + APScheduler worker)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  # --- Web / ASGI ---
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "gunicorn==22.0.0",
  "python-multipart==0.0.9",
  "starlette==0.38.6",
  # --- Validation / config ---
  "pydantic==2.7.4",
  "pydantic-settings==2.4.0",
  # --- ORM / DB ---
  "SQLAlchemy[asyncio]==2.0.34",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  # --- Templating ---
  "Jinja2==3.1.4",
  # --- Crypto / passwords ---
  "cryptography==42.0.8",
  "argon2-cffi==23.1.0",
  # --- HTTP client ---
  "httpx==0.27.2",
  # --- Logging ---
  "structlog==24.4.0",
  # --- Rate-limit ---
  "slowapi==0.1.9",
  # --- Sessions / Redis ---
  "redis==5.0.8",
  # --- Mail ---
  "aiosmtplib==3.0.2",
  "imap-tools==1.6.0",
  "html2text==2024.2.26",
  # round-12 bug B: HTML body sanitiser for ``messages.body_html`` and
  # the Telegram callback path. Whitelist-based, drops <script> etc.
  "bleach==6.1.0",
  # --- MinIO / S3 ---
  "aioboto3==13.2.0",
  # --- Scheduler ---
  "APScheduler==3.10.4",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio>=0.24",
  "coverage==7.6.1",
  "ruff==0.5.7",
  "mypy==1.10.1",
  "pre-commit==3.7.1",
  "types-redis==4.6.0.20240903",
  "fakeredis==2.24.1",
  "moto==5.0.16",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Two top-level packages: one for the API container, one for the worker.
packages = ["backend", "worker", "shared"]

[tool.uv]
# Backend agent generates this lock; CI runs `uv sync --frozen`.
package = true

# ---------------------------------------------------------------------------
# Ruff (lint + format) — replaces black/isort/flake8 (docs/02-tech-stack.md).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "migrations/versions",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # comprehensions
  "SIM",  # simplify
  "TID",  # tidy imports
  "RET",  # return
  "PL",   # pylint subset
  "RUF",  # ruff-specific
]
ignore = [
  "E501",   # line length is enforced by formatter; long log messages allowed
  "PLR0913", # too many arguments — domain APIs sometimes need them
  "PLR2004", # magic numbers — many small ones are clearer than constants
  "PLR0912", # too many branches — service methods are intentionally explicit
  "PLR0915", # too many statements — sync_one_account is unavoidably long
  "B008",   # function call in default arg — FastAPI Depends() pattern
  "SIM117", # nested with — sometimes the explicit form is clearer
  "PLW0603", # `global` use — intentional for our singleton getters
  "SIM102", # nested if — explicit two-step check is clearer in some places
]

[tool.ruff.lint.per-file-ignores]
# alembic env.py uses SQLAlchemy patterns it can't avoid
"migrations/env.py" = ["E402", "F401"]
# Tests: relax overly-pedantic style rules.
"tests/**/*.py" = ["E402", "SIM105", "RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict on backend/worker/shared, lenient elsewhere
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = []
exclude = [
  "migrations/versions/",
  "build/",
  ".venv/",
]

# Third-party libs without type stubs we accept as untyped.
[[tool.mypy.overrides]]
module = [
  "imap_tools.*",
  "aioboto3.*",
  "aiosmtplib.*",
  "slowapi.*",
  "html2text.*",
  "apscheduler.*",
  "bleach.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "unit: pure unit tests, no I/O, no docker dependencies",
  "integration: requires postgres + redis + minio (docker compose up)",
  "worker: tests for worker.app.* (with mocked imap-tools)",
  "contract: validate API response shapes against docs/04-api-contracts.md",
  "frontend: render Jinja2 templates and inspect HTML",
]
filterwarnings = [
  "ignore::DeprecationWarning:sqlalchemy.*",
  "ignore::DeprecationWarning:botocore.*",
  "ignore::DeprecationWarning:aiobotocore.*",
]
